--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
         <title>KALESA</title>
     </head>
     <body>
-        <a class="gb-menu-items" href="add.php"><div style="background-color: #FFFFFF; color:#727272;"><i class="fa fa-plus"></i>RIDE</div></a>
+        <a class="gb-menu-items" href="destination.php"><div style="background-color: #FFFFFF; color:#727272;"><i class="fa fa-plus"></i>RIDE</div></a>
         <a class="gb-menu-items" href="available.php"><div style="background-color: #0288D1; color:#b3e5fc;"><i class="fa fa-calendar"></i>STATION NEAR YOU: 5 KALESAS AVAILABLE</div></a>
 
  <script type="text/javascript">
